# tcm-retrieval-eval

./: .gitignore  README.md  evaluate_retrieval.py  generate_charts.py  ingest.py  load_data.sh  load_data_qwen3.sh  load_data_qwen3_finetuned.sh  pyproject.toml  tcm_sd_prompt_generator.py
data/: syndrome_knowledge_fixed.json
